Fixed edit box alignment

--- a/cotrix/cotrix-web-manage/src/main/resources/org/cotrix/web/manage/client/resources/style.css
+++ b/cotrix/cotrix-web-manage/src/main/resources/org/cotrix/web/manage/client/resources/style.css
@@ -4,10 +4,13 @@
 	-moz-box-sizing: border-box;
 	width: 100%;
 	height: 100%;
-	padding-bottom: 5px;
+	
+	padding: 8px 6px 8px 14px;
+	
+	/*padding-bottom: 5px;
 	padding-left: 9px;
 	padding-right: 6px;
-	padding-top: 4px;
+	padding-top: 4px;*/
 }
 
 .systemProperty {
